Fixed scrollbars appearing on metadata

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ h3.notion-heading .notion-semantic-string {
 .notion-property__select {
   display: inline !important;
   white-space: normal !important;
-  overflow: auto !important;
+  overflow: hidden !important;
 }
 
 /* Adjust pill styling */
